--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.jpa.database=POSTGRESQL
+server.port=8080
 spring.sql.init.platform=postgres
 spring.datasource.url=jdbc:postgresql://34.28.139.78:5432/banquitoAccounts
 spring.datasource.username=postgres
